--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "typescript": "^5.4.3"
   },
   "dependencies": {
+    "@google-cloud/local-auth": "^2.1.0",
     "@prisma/client": "^5.11.0",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "googleapis": "^105.0.0"
   }
 }
