--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@google-cloud/local-auth": "^2.1.0",
     "@prisma/client": "^5.11.0",
+    "axios": "^1.6.8",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "googleapis": "^105.0.0"
