added HUBSPOT API

--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mongodb+srv://zakariamouchtati01:JIaihINVJopS0Y0L@cluster0.gloaste.mongodb.net/lp-esav"
+
+HUBSPOT_ACCESS_TOKEN="pat-eu1-d13bc29c-6e58-491a-9ee0-aa0fcf3eba7a"
