--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "postinstall": "prisma generate",
     "bnuild": "prisma generate && tsc",
-    "dev": "nodemon index.ts"
+    "dev": "nodemon app.ts"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
@@ -19,7 +19,6 @@
     "@prisma/client": "^5.11.0",
     "axios": "^1.6.8",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "googleapis": "^105.0.0"
   }
