--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "postinstall": "prisma generate",
     "bnuild": "prisma generate && tsc",
-    "dev": "nodemon index.ts"
+    "dev": "nodemon app.ts"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
